# pallette-generator

./: .gitignore  Cargo.toml  README.md  pallette.txt  pegleg.txt  todo.txt
src/: color.rs  color_detail.rs  main.rs  pallette.rs  similar.rs
src/apps/: color_app.rs  color_wheel_app.rs  mod.rs  paint_app.rs  palette_app.rs  pallette_app.rs  wrap_app.rs
src/core/: color.rs  color_detail.rs  color_names.rs  color_relation.rs  mod.rs  palette.rs  pallette.rs  similar.rs
src/debug/: backend_panel.rs  mod.rs
src/tests/: color_tests.rs
src/widgets/: color_picker.rs  fixed_cache.rs  mod.rs
stats/: gen_stats.sh  linecount.txt
