[package]
name = "pallette-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "all_loaders", "image"] }
env_logger = "0.11.8"

image = "0.25.8"
lazy_static = "1.5.0"
log = "0.4.28"
rand = "0.9.2"
raqote = "0.8.5"
rfd = "0.15.4"
