[package]
name = "pallette-generator"
version = "0.1.0"
edition = "2024"


[features]
## Enable persistence of memory (window positions etc).

[dependencies]
csv = "1.3.1"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "all_loaders", "image"] }
env_logger = "0.11.8"

image = { version = "0.25.8", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.28"
rand = "0.9.2"
raqote = "0.8.5"
rfd = "0.15.4"
serde = "1.0.228"
uuid = { version = "1.18.1", features = ["v4", "serde"]}
